# shadow_stack

./: .gdb_history  .gitignore  README.md  compile.sh  main.bc  main.c  setup.py
c-draft/gsbase/: gsbase  gsbase.c
c-draft/mmap/: Makefile  mmap  mmap.c
ir-decoder-10/: main.c.in  pass.cpp
ir-decoder-llvm10/: CMakeLists.txt
llvm/include/llvm/: InitializePasses.h
mmap/: mmap  mmap.c
others/c-draft/gsbase/: gsbase  gsbase.c
others/c-draft/mmap/: .gdb_history
others/shadow-stack-llvm10/: pass.cpp
others/shadow-stack-llvm6/: CMakeLists.txt  USAGE
shadow-stack-10/: pass.cpp
shadow-stack-llvm6/: pass.cpp
shadow-stack-x86/: pass.cpp
shadow_stack/: main.c.in  pass.cpp
shadow_stack/tmp/: .gdb_history  a.out  main.c  main_gcc
